--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- home -->
     <section class="home">
         <div class="homeText">
-            <h1>Men's New <br> <span>Arrivals</span></h1>
+            <h1>Fresh Food <br> <span>For You</span></h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             <a href="#" class="btn">View Collection</a>
         </div>
@@ -124,8 +124,8 @@
     <!-- cta -->
     <section class="cta">
         <div class="ctaText">
-            <h6>SUMMER ON SALE</h6>
-            <h4>20% OFF <br> NEW ARRIVAL</h4>
+            <h6>NANTIKAN PRODUK TERBARU KAMI</h6>
+            <h4>COMMING <br> SOON</h4>
             <a href="#" class="btn">Shop Now</a>
         </div>
     </section>
